Version 3.7.3 - dark mode fix, login screen redesign

--- a/style.css
+++ b/style.css
@@ -213,8 +213,21 @@ div.settings h4 {
 	background-color: #f3ebfc;
 }
 
-/* progressbar design */
+/* chart darkmode corrections */
 
+.dark-mode .google-visualization-tooltip-item-list [style="background-color:#000000;"] {
+	background-color: white !important;
+}
+
+.dark-mode svg[aria-label="A chart."] [stroke="#000000"] {
+	stroke: white;
+}
+
+.dark-mode svg[aria-label="A chart."] [fill="#000000"] {
+	fill: white;
+}
+
+/* progressbar design */
 #progressbar {
 	background-color: grey;
 	border-radius: 13px;
